tests/NormalTests/paczka1/fuzzy1/29967983.err
Error in line 1: Mj2SDnvM A74 20,5
Error in line 5: vAy A787 86,91
Error in line 10: g2iVtkADfP A787 46,9
Error in line 20: Mj2SDnvM A74 60,9
Error in line 19: ahBMc1w A74 85,6
Error in line 3: vAy A787 28,7
